--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,22 +7,35 @@
     android:orientation="vertical"
     tools:context=".SearchFragment">
 
-    <EditText
-        android:id="@+id/searchBar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Search by source name"
-        android:inputType="text"
-        android:imeOptions="actionSearch"
-        android:drawableEnd="@drawable/ic_search"
-        android:fontFamily="@font/poppins_regular"
-        android:drawablePadding="8dp"
-        android:padding="10dp"
-        android:background="@drawable/edittext_border_selector"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <EditText
+            android:id="@+id/searchBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:hint="Search by source name"
+            android:inputType="text"
+            android:imeOptions="actionSearch"
+            android:drawableEnd="@drawable/ic_search"
+            android:fontFamily="@font/poppins_regular"
+            android:drawablePadding="8dp"
+            android:padding="10dp"
+            android:background="@drawable/edittext_border_selector"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/searchRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/searchRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" />
+
+</RelativeLayout>
